<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textview_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textview_developer"
        android:layout_alignTop="@+id/textview_developer"
        android:layout_marginTop="72dp"
        android:text="@string/mail" />

    <TextView
        android:id="@+id/textview_developer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        android:text="@string/developer" />


    <Button
        android:id="@+id/button_menu_principal_contacts"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textview_developer"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_principal" />

</RelativeLayout>