<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


      <TextView
        android:id="@+id/textview_entrer_depenses"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/entrer_depenses" />
    
    <Button
        android:id="@+id/button_ajouter_recette"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textview_entrer_depenses"
        android:layout_below="@+id/textview_entrer_depenses"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/ajouter" />

    <Button
        android:id="@+id/button_suivant_recette"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textview_entrer_depenses"
        android:layout_marginBottom="18dp"
        android:text="@string/suivant" />

    <TextView
        android:id="@+id/textview_description_recette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_description_recette"
        android:layout_alignLeft="@+id/edittext_description_recette"
        android:layout_marginBottom="16dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/textview_montant_recette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_montant_recette"
        android:layout_alignLeft="@+id/edittext_montant_recette"
        android:layout_marginBottom="21dp"
        android:text="@string/montant" />

    <EditText
        android:id="@+id/edittext_description_recette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_montant_recette"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edittext_montant_recette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_suivant_recette"
        android:layout_alignLeft="@+id/button_ajouter_recette"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

</RelativeLayout>